--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnIngresar"
         android:layout_width="150dp"
         android:layout_height="69dp"
         android:text="@string/ingresar"
